src/vk_mem_alloc.rs

    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<VmaVulkanFunctions>())).vkGetBufferMemoryRequirements2KHR
                as *const _ as usize
        },
        112usize,
        concat!(
            "Offset of field: ",
            stringify!(VmaVulkanFunctions),
            "::",
            stringify!(vkGetBufferMemoryRequirements2KHR)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<VmaVulkanFunctions>())).vkGetImageMemoryRequirements2KHR
                as *const _ as usize
        },
        120usize,
        concat!(
            "Offset of field: ",
            stringify!(VmaVulkanFunctions),
            "::",
            stringify!(vkGetImageMemoryRequirements2KHR)
        )
    );
}
/// Description of a Allocator to be created.
#[repr(C)]
pub struct VmaAllocatorCreateInfo {
    /// Flags for created allocator. Use #VmaAllocatorCreateFlagBits enum.
    pub flags: VmaAllocatorCreateFlags,
    /// Vulkan physical device.
    /// /** It must be valid throughout whole lifetime of created allocator. */
    pub physicalDevice: VkPhysicalDevice,
    /// Vulkan device.
    /// /** It must be valid throughout whole lifetime of created allocator. */
    pub device: VkDevice,
    /// Preferred size of a single `VkDeviceMemory` block to be allocated from large heaps > 1 GiB. Optional.
    /// /** Set to 0 to use default, which is currently 256 MiB. */
    pub preferredLargeHeapBlockSize: VkDeviceSize,
    /// Custom CPU memory allocation callbacks. Optional.
    /// /** Optional, can be null. When specified, will also be used for all CPU-side memory allocations. */
    pub pAllocationCallbacks: *const VkAllocationCallbacks,
    /// Informative callbacks for `vkAllocateMemory`, `vkFreeMemory`. Optional.
    /// /** Optional, can be null. */
    pub pDeviceMemoryCallbacks: *const VmaDeviceMemoryCallbacks,
    /// \brief Maximum number of additional frames that are in use at the same time as current frame.
    ///
    /// This value is used only when you make allocations with
    /// VMA_ALLOCATION_CREATE_CAN_BECOME_LOST_BIT flag. Such allocation cannot become
    /// lost if allocation.lastUseFrameIndex >= allocator.currentFrameIndex - frameInUseCount.
    ///
    /// For example, if you double-buffer your command buffers, so resources used for
    /// rendering in previous frame may still be in use by the GPU at the moment you
    /// allocate resources needed for the current frame, set this value to 1.
    ///
    /// If you want to allow any allocations other than used in the current frame to
    /// become lost, set this value to 0.
    pub frameInUseCount: u32,
    /// \brief Either null or a pointer to an array of limits on maximum number of bytes that can be allocated out of particular Vulkan memory heap.
    ///
    /// If not NULL, it must be a pointer to an array of
    /// `VkPhysicalDeviceMemoryProperties::memoryHeapCount` elements, defining limit on
    /// maximum number of bytes that can be allocated out of particular Vulkan memory
    /// heap.
    ///
    /// Any of the elements may be equal to `VK_WHOLE_SIZE`, which means no limit on that
    /// heap. This is also the default in case of `pHeapSizeLimit` = NULL.
    ///
    /// If there is a limit defined for a heap:
    ///
    /// - If user tries to allocate more memory from that heap using this allocator,
    /// the allocation fails with `VK_ERROR_OUT_OF_DEVICE_MEMORY`.
    /// - If the limit is smaller than heap size reported in `VkMemoryHeap::size`, the
    /// value of this limit will be reported instead when using vmaGetMemoryProperties().
    ///
    /// Warning! Using this feature may not be equivalent to installing a GPU with
    /// smaller amount of memory, because graphics driver doesn't necessary fail new
    /// allocations with `VK_ERROR_OUT_OF_DEVICE_MEMORY` result when memory capacity is
    /// exceeded. It may return success and just silently migrate some device memory
    /// blocks to system RAM.
    pub pHeapSizeLimit: *const VkDeviceSize,
    /// \brief Pointers to Vulkan functions. Can be null if you leave define `VMA_STATIC_VULKAN_FUNCTIONS 1`.
    ///
    /// If you leave define `VMA_STATIC_VULKAN_FUNCTIONS 1` in configuration section,
    /// you can pass null as this member, because the library will fetch pointers to
    /// Vulkan functions internally in a static way, like:
    ///
    /// vulkanFunctions.vkAllocateMemory = &vkAllocateMemory;
    ///
    /// Fill this member if you want to provide your own pointers to Vulkan functions,
    /// e.g. fetched using `vkGetInstanceProcAddr()` and `vkGetDeviceProcAddr()`.
    pub pVulkanFunctions: *const VmaVulkanFunctions,
}
#[test]
fn bindgen_test_layout_VmaAllocatorCreateInfo() {
    assert_eq!(
        ::std::mem::size_of::<VmaAllocatorCreateInfo>(),
        72usize,
        concat!("Size of: ", stringify!(VmaAllocatorCreateInfo))
    );
    assert_eq!(
        ::std::mem::align_of::<VmaAllocatorCreateInfo>(),
        8usize,
        concat!("Alignment of ", stringify!(VmaAllocatorCreateInfo))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<VmaAllocatorCreateInfo>())).flags as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(VmaAllocatorCreateInfo),
            "::",
            stringify!(flags)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<VmaAllocatorCreateInfo>())).physicalDevice as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(VmaAllocatorCreateInfo),
            "::",
            stringify!(physicalDevice)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<VmaAllocatorCreateInfo>())).device as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(VmaAllocatorCreateInfo),
            "::",
            stringify!(device)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<VmaAllocatorCreateInfo>())).preferredLargeHeapBlockSize
                as *const _ as usize
        },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(VmaAllocatorCreateInfo),
            "::",
            stringify!(preferredLargeHeapBlockSize)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<VmaAllocatorCreateInfo>())).pAllocationCallbacks as *const _
                as usize
        },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(VmaAllocatorCreateInfo),
            "::",
            stringify!(pAllocationCallbacks)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<VmaAllocatorCreateInfo>())).pDeviceMemoryCallbacks as *const _
                as usize
        },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(VmaAllocatorCreateInfo),
            "::",
            stringify!(pDeviceMemoryCallbacks)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<VmaAllocatorCreateInfo>())).frameInUseCount as *const _ as usize
        },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(VmaAllocatorCreateInfo),
            "::",
            stringify!(frameInUseCount)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<VmaAllocatorCreateInfo>())).pHeapSizeLimit as *const _ as usize
        },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(VmaAllocatorCreateInfo),
            "::",
            stringify!(pHeapSizeLimit)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<VmaAllocatorCreateInfo>())).pVulkanFunctions as *const _ as usize
        },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(VmaAllocatorCreateInfo),
            "::",
            stringify!(pVulkanFunctions)
        )
    );
}
extern "C" {
    /// Creates Allocator object.
    pub fn vmaCreateAllocator(
        pCreateInfo: *const VmaAllocatorCreateInfo,
        pAllocator: *mut VmaAllocator,
    ) -> VkResult;
}
extern "C" {
    /// Destroys allocator object.
    pub fn vmaDestroyAllocator(allocator: VmaAllocator);
}
extern "C" {
    /// PhysicalDeviceProperties are fetched from physicalDevice by the allocator.
    /// You can access it here, without fetching it again on your own.
    pub fn vmaGetPhysicalDeviceProperties(
        allocator: VmaAllocator,
        ppPhysicalDeviceProperties: *mut *const VkPhysicalDeviceProperties,
    );
}
extern "C" {
    /// PhysicalDeviceMemoryProperties are fetched from physicalDevice by the allocator.
    /// You can access it here, without fetching it again on your own.
    pub fn vmaGetMemoryProperties(
        allocator: VmaAllocator,
        ppPhysicalDeviceMemoryProperties: *mut *const VkPhysicalDeviceMemoryProperties,
    );
}
extern "C" {
    /// \brief Given Memory Type Index, returns Property Flags of this memory type.
    ///
    /// This is just a convenience function. Same information can be obtained using
    /// vmaGetMemoryProperties().
    pub fn vmaGetMemoryTypeProperties(
        allocator: VmaAllocator,
        memoryTypeIndex: u32,
        pFlags: *mut VkMemoryPropertyFlags,
    );
}
extern "C" {
    /// \brief Sets index of the current frame.
    ///
    /// This function must be used if you make allocations with
    /// #VMA_ALLOCATION_CREATE_CAN_BECOME_LOST_BIT and
    /// #VMA_ALLOCATION_CREATE_CAN_MAKE_OTHER_LOST_BIT flags to inform the allocator
    /// when a new frame begins. Allocations queried using vmaGetAllocationInfo() cannot
    /// become lost in the current frame.
    pub fn vmaSetCurrentFrameIndex(allocator: VmaAllocator, frameIndex: u32);
}
/// \brief Calculated statistics of memory usage in entire allocator.
#[repr(C)]
pub struct VmaStatInfo {
    /// Number of `VkDeviceMemory` Vulkan memory blocks allocated.
    pub blockCount: u32,
    /// Number of #VmaAllocation allocation objects allocated.
    pub allocationCount: u32,
    /// Number of free ranges of memory between allocations.
    pub unusedRangeCount: u32,
    /// Total number of bytes occupied by all allocations.
    pub usedBytes: VkDeviceSize,
    /// Total number of bytes occupied by unused ranges.
    pub unusedBytes: VkDeviceSize,
    pub allocationSizeMin: VkDeviceSize,
    pub allocationSizeAvg: VkDeviceSize,
    pub allocationSizeMax: VkDeviceSize,
    pub unusedRangeSizeMin: VkDeviceSize,
    pub unusedRangeSizeAvg: VkDeviceSize,
    pub unusedRangeSizeMax: VkDeviceSize,
}
